# robotics_v1

./: README.md
src/robo_collector/robo_collector_controller/config/: params.yaml
src/robo_collector/robo_collector_controller/include/robo_collector_controller/external_api/: CollectorGuiExternalBridge.h
src/robo_collector/robo_collector_controller/src/external_api/: CollectorGuiExternalBridge.cpp
src/ur_dev/urscript/urscript_picker/: package.xml  setup.cfg  setup.py
src/ur_dev/urscript/urscript_picker/scripts/: gripper_close.script  gripper_open.script
src/ur_dev/urscript/urscript_picker/urscript_picker/: positions.py  urscript_picker.py
