<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urscript_picker</name>
  <version>1.0.0</version>
  <description>URScript client</description>
  <maintainer email="tsvetomila.mihaylova@gmail.com">tsvm</maintainer>
  <license>TODO: License declaration</license>

  
  <build_depend>urscript_interfaces</build_depend>
  <build_depend>urscript_common</build_depend>

  <exec_depend>urscript_interfaces</exec_depend>
  <exec_depend>urscript_common</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
